--- a/_posts/Basic Git Commands.mdx
+++ b/_posts/Basic Git Commands.mdx
@@ -1,15 +1,12 @@
 ---
 title: Basic Git Commands
 author: Rahul Gajbhiye
+excerpt: "A list of commonly used Git commands."
 category:
   - Development
 keywords: "#Git #Github"
 date: 2024-12-17
 ---
-
-_A list of commonly used Git commands._
-
-### Table of Contents
 
 ### Getting & Creating Projects
 
