--- a/_posts/Best Project Structure For Next.js and React.js.mdx
+++ b/_posts/Best Project Structure For Next.js and React.js.mdx
@@ -1,13 +1,12 @@
 ---
 title: Best Project Structure For Next.js and React.js
 author: Rahul Gajbhiye
+excerpt: "> Not a good start is ok, but a good start is great."
 category:
   - Development
 keywords: "#Next.js #React.js"
 date: 17-April-2025
 ---
-
-> Not a good start is ok, but a good start is great.
 
 Any application which is started small not always meant to be small, it will become big eventually. Hence I am sharing with you a project structure which I use for small to big applications build over Next.js & React.js to have a good foundation. By using this structure you will have maintainability, scalability, and consistency over the project and also allows you to focus more on the features rather than the code structure.
 
