--- a/_posts/Getting Started with Next.js and MDX.mdx
+++ b/_posts/Getting Started with Next.js and MDX.mdx
@@ -2,7 +2,7 @@
 title: "Getting Started with Next.js and MDX"
 date: "2024-01-15"
 excerpt: "Learn how to set up a powerful blog using Next.js and MDX with custom components."
-author: "john-doe"
+author: Rahul Gajbhiye
 tags: ["nextjs", "mdx", "react", "blog"]
 published: true
 ---
